--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/planswell/bulma/36de8025/docs/css/bulma-docs.css">
+    <link rel="stylesheet" href="https://rawgit.com/planswell/bulma/master/docs/css/bulma-docs.css">
   </head>
   <body>
   <section class="section">
